--- a/receitas.html
+++ b/receitas.html
@@ -6,6 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Sempre colocar os 3 metas para a responsividade funcionar-->
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
    <link rel="stylesheet" href="custom.css">
    <title></title>
 </head>
@@ -15,27 +16,86 @@
       <nav class="navbar navbar-default navbar-fixed-top">
          <div class="container-fluid">
             <div class="navbar-header">
-               <a class="navbar-brand"href="#"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
+               <a class="navbar-brand"href="index.html"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-               <li><a href="#" class="receitas">Receitas</a></li>
-               <li><a href="#" class="sobre">Sobre</a></li>
-               <li><a href="#" class="contato">Contato</a></li>
+               <li><a href="receitas.html">Receitas</a></li>
+               <li><a href="sobre.html">Sobre</a></li>
+               <li><a href="contato.html">Contato</a></li>
             </ul>
          </div>
       </nav>
    </header>
+
+   <section id="destaques">
+      <div>
+         <div class="container bloco">
+            <div class="col-md-12">
+               <h1>Destaques</h1>
+            </div>
+            <div class="col-xs-12 col-md-6">
+               <div class="imagemFundo" style="background-image: url(imagens/destaque1.jpg)">
+                  <div class="textoFundo">
+                     <h2>Feijoada Completa para 6 pessoas</h2>
+                     <p>Como resistir a uma feijoada completa, não é? Com aquele
+                        arroz branco, couve, farofa… que maravilha! E especialmente
+                        nos dias mais frios ela vai muito bem!</p>
+                  </div>
+               </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+               <div class="imagemFundo" style="background-image: url(imagens/destaque2.jpg)">
+                  <div class="textoFundo">
+                     <h2>Lasanha de Carne</h2>
+                     <p>A lasanha, prato de origem italiana, consiste em camadas
+                        de massa de macarrão em formato de folhas com queijos e
+                        molhos diferentes entre elas.</p>
+                  </div>
+               </div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+               <div class="imagemFundoMenor" style="background-image: url(imagens/destaque3.jpg)">
+                  <div class="textoFundo">
+                     <h3>Mousse de Limão</h3>
+                     <p>Você vai adorar essa receita de mousse de limão.
+                        Não há nada mais gostoso do que essa mousse de limão simples.
+                        É rápido de fazer e fica uma delícia!</p>
+                  </div>
+               </div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+               <div class="imagemFundoMenor" style="background-image: url(imagens/destaque4.jpg)">
+                  <div class="textoFundo">
+                     <h3>Hamburguer Caseiro</h3>
+                     <p>Se você quer aprender como fazer um hambúrguer caseiro
+                        tão bom quanto da sua hamburgueria preferida acertou.</p>
+                  </div>
+               </div>
+            </div>
+            <div class="col-xs-12 col-md-4">
+               <div class="imagemFundoMenor" style="background-image: url(imagens/destaque5.jpg)">
+                  <div class="textoFundo">
+                     <h3>Cupcake Veludo Vermelho</h3>
+                     <p>É uma receita tradicional americana. É um doce delicioso e
+                        tem a referência de "ser o melhor bolo do mundo" e realmente o é.</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+
    <footer id="footer">
 	    <div class="containerfooter">
 	        <div class="row" >
 
-	            <div class="col-xm-12 col-sm-4 col-md-4">
+	            <div class="col-xs-12 col-sm-4 col-md-4">
 	              <div class="logo">
 	                  <a href="index.html">  <img src="imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
 	              </div>
 	            </div>
 
-	            <div class="contatofooter col-xm-12 col-sm-4 col-md-4">
+	            <div class="contatofooter col-xs-12 col-sm-4 col-md-4">
 	                <div class="endereco">
 	                    <p> Rua Passo da Pátria, 156 - Instituto de Computação, Niterói, Rio de Janeiro - Brasil</p>
 	                </div>
@@ -44,12 +104,13 @@
 	                <p> ReiceitINhas | Todos os direitos reservados </p>
 	            </div>
 
-	            <div class="sociais col-xm-12 col-sm-6 col-md-4">
+	            <div class="sociais col-xs-12 col-sm-6 col-md-4">
   	                <p>Acompanhe-nos nas redes sociais</p>
   	                <ul class="redessociais">
 	                    <li><a href="#">  <img  src="imagens/facebook.png" alt="facebook"/></a></li>
 	                    <li><a href="#">  <img  src="imagens/instagram.png" alt="instagram"/></a></li>
-	                	<li><a href="#">  <img  src="imagens/twitter.png" alt="twitter "/></li>
+	                	  <li><a href="#">  <img  src="imagens/twitter.png" alt="twitter "/></a></li>
+                   </ul>
 	                </div>
 	            </div>
 	          </div>
