--- a/sobre.html
+++ b/sobre.html
@@ -6,6 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Sempre colocar os 3 metas para a responsividade funcionar-->
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
    <link rel="stylesheet" href="custom.css">
    <title></title>
 </head>
@@ -15,12 +16,12 @@
       <nav class="navbar navbar-default navbar-fixed-top">
          <div class="container-fluid">
             <div class="navbar-header">
-               <a class="navbar-brand"href="#"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
+               <a class="navbar-brand"href="index.html"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-               <li><a href="#" class="receitas">Receitas</a></li>
-               <li><a href="#" class="sobre">Sobre</a></li>
-               <li><a href="#" class="contato">Contato</a></li>
+               <li><a href="receitas.html">Receitas</a></li>
+               <li><a href="sobre.html">Sobre</a></li>
+               <li><a href="contato.html">Contato</a></li>
             </ul>
          </div>
       </nav>
@@ -49,8 +50,8 @@
   	                <ul class="redessociais">
 	                    <li><a href="#">  <img  src="imagens/facebook.png" alt="facebook"/></a></li>
 	                    <li><a href="#">  <img  src="imagens/instagram.png" alt="instagram"/></a></li>
-	                	<li><a href="#">  <img  src="imagens/twitter.png" alt="twitter "/></li>
-	                </div>
+                       <li><a href="#">  <img  src="imagens/twitter.png" alt="twitter "/></a></li>
+                   </ul>
 	            </div>
 	          </div>
 	  		</div>
