--- a/sobre.html
+++ b/sobre.html
@@ -6,7 +6,6 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Sempre colocar os 3 metas para a responsividade funcionar-->
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
    <link rel="stylesheet" href="custom.css">
    <title></title>
 </head>
@@ -16,45 +15,79 @@
       <nav class="navbar navbar-default navbar-fixed-top">
          <div class="container-fluid">
             <div class="navbar-header">
-               <a class="navbar-brand"href="index.html"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
+               <a class="navbar-brand"href="#"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-               <li><a href="receitas.html">Receitas</a></li>
-               <li><a href="sobre.html">Sobre</a></li>
-               <li><a href="contato.html">Contato</a></li>
+               <li><a href="#" class="receitas">Receitas</a></li>
+               <li><a href="#" class="sobre">Sobre</a></li>
+               <li><a href="#" class="contato">Contato</a></li>
             </ul>
          </div>
       </nav>
    </header>
+
+   <section class="sobre"> 
+         <div class="container bloco">
+                            <div class="col-md-12">
+                            <h2><b>Quem somos</b></h2> 
+                            </div>
+                            <div class="col-xs-12">
+                               <p>Plataforma de conteúdo gastronômico, o <b>ReceINtinhas</b> reúne pessoas comuns que simplesmente gostam de comer e beber e que compartilham suas impressões
+                               e receitas para todos. Não somos só especialistas, somos  loucos por viver a gastronomia em todos os seus sentidos. E falar sobre ela. <br>
+                               As receitas são práticas, econômicas e para todos os públicos: desde vegetarianos até carnívoros. Além disso, não somos apenas mais um site de receitas e sim um guia prático e rápido para que qualquer um pode aprender a cozinhar, basta ter uma boa receita na mão e a boa vontade de executar.</p>
+                            </div>
+              
+                            <div class="col-md-12"><h2><b>Equipe</b></h2></div>
+                            <div class="chef1 col-xm-12 col-sm-12 col-md-6">
+                                    <div class="imagemFundoChef" style="background-image: url(imagens/chef1.jpg)">
+                                        <div class="textoFundoChef">
+                                           <h2>Nicole Smith</h2>
+                                        </div>
+                                    </div>
+                            </div>
+                            <div class="chef2 col-xm-12 col-sm-12 col-md-6">
+                                    <div class="imagemFundoChef" style="background-image: url(imagens/chef.jpg)">
+                                        <div class="textoFundoChef">
+                                           <h2>Thomas Nelson</h2>
+                                        </div>
+                                    </div>
+                            </div>
+
+         </div>
+   </section>
+
+
+
+
    <footer id="footer">
-	    <div class="containerfooter">
-	        <div class="row" >
+      <div class="containerfooter">
+          <div class="row" >
 
-	            <div class="col-xm-12 col-sm-4 col-md-4">
-	              <div class="logo">
-	                  <a href="index.html">  <img src="imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
-	              </div>
-	            </div>
+              <div class="col-xm-12 col-sm-4 col-md-4">
+                <div class="logo">
+                    <a href="index.html">  <img src="imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
+                </div>
+              </div>
 
-	            <div class="contatofooter col-xm-12 col-sm-4 col-md-4">
-	                <div class="endereco">
-	                    <p> Rua Passo da Pátria, 156 - Instituto de Computação, Niterói, Rio de Janeiro - Brasil</p>
-	                </div>
-	                <p>receitinhas@injunior.com.br</p>
+              <div class="contatofooter col-xm-12 col-sm-4 col-md-4">
+                  <div class="endereco">
+                      <p> Rua Passo da Pátria, 156 - Instituto de Computação, Niterói, Rio de Janeiro - Brasil</p>
+                  </div>
+                  <p>receitinhas@injunior.com.br</p>
 
-	                <p> ReiceitINhas | Todos os direitos reservados </p>
-	            </div>
+                  <p> ReiceitINhas | Todos os direitos reservados </p>
+              </div>
 
-	            <div class="sociais col-xm-12 col-sm-6 col-md-4">
-  	                <p>Acompanhe-nos nas redes sociais</p>
-  	                <ul class="redessociais">
-	                    <li><a href="#">  <img  src="imagens/facebook.png" alt="facebook"/></a></li>
-	                    <li><a href="#">  <img  src="imagens/instagram.png" alt="instagram"/></a></li>
-                       <li><a href="#">  <img  src="imagens/twitter.png" alt="twitter "/></a></li>
-                   </ul>
-	            </div>
-	          </div>
-	  		</div>
+              <div class="sociais col-xm-12 col-sm-4 col-md-4">
+                    <p>Acompanhe-nos nas redes sociais</p>
+                    <ul class="redessociais">
+                      <li><a href="#">  <img  src="imagens/facebook.png" alt="facebook"/></a></li>
+                      <li><a href="#">  <img  src="imagens/instagram.png" alt="instagram"/></a></li>
+                    <li><a href="#">  <img  src="imagens/twitter.png" alt="twitter "/></li>
+                  </div>
+              </div>
+            </div>
+        </div>
    </footer>
 </body>
 
