--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,7 @@
                <a class="navbar-brand"href="#"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-               <li><a href="#" class="receitas">Receitas</a></li>
+               <li><a href="receitas.html" class="receitas">Receitas</a></li>
                <li><a href="#" class="sobre">Sobre</a></li>
                <li><a href="#" class="contato">Contato</a></li>
             </ul>
@@ -48,7 +48,7 @@
                             <div class="chef2 col-xm-12 col-sm-12 col-md-6">
                                     <div class="imagemFundoChef" style="background-image: url(imagens/chef.jpg)">
                                         <div class="textoFundoChef">
-                                           <h2>Thomas Nelson</h2>
+                                           <h2>Thomas Smith</h2>
                                         </div>
                                     </div>
                             </div>
