Adição da página Contato

--- a/contato.html
+++ b/contato.html
@@ -26,6 +26,27 @@
          </div>
       </nav>
    </header>
+
+   <section id="contato">
+      <div>
+         <div class="container bloco">
+            <div class="col-md-12">
+               <h1>Contato</h1>
+               <h3>Telefones</h3>
+               <p>(21) 2629-5668<br>
+                  (21) 2629-5667</p>
+               <h3>Email</h3>
+               <p>receitinhas@injunior.com.br</p>
+               <h3>Endereço</h3>
+               <p>Rua Passo da Pátria, 156 - Instituto de Computação<br>
+                  Niterói, Rio de Janeiro - Brasil</p>
+               <h3 style="text-align: center; padding-left: 0px;">Mapa</h3>
+               <img class="img-responsive" src="imagens/mapa.png" style="margin: 30px auto" alt="Mapa Como Chegar">
+            </div>
+         </div>
+      </div>
+   </section>
+
    <footer id="footer">
 	    <div class="containerfooter">
 	        <div class="row" >
