--- a/receitas.html
+++ b/receitas.html
@@ -35,50 +35,50 @@
             </div>
             <div class="col-xs-12 col-md-6">
                <div class="imagemFundo" style="background-image: url(imagens/destaque1.jpg)">
-                  <div class="textoFundo">
+                  <a href="#"><div class="textoFundo">
                      <h2>Feijoada Completa para 6 pessoas</h2>
                      <p>Como resistir a uma feijoada completa, não é? Com aquele
                         arroz branco, couve, farofa… que maravilha! E especialmente
                         nos dias mais frios ela vai muito bem!</p>
-                  </div>
+                  </div></a>
                </div>
             </div>
             <div class="col-xs-12 col-md-6">
                <div class="imagemFundo" style="background-image: url(imagens/destaque2.jpg)">
-                  <div class="textoFundo">
+                  <a href="#"><div class="textoFundo">
                      <h2>Lasanha de Carne</h2>
                      <p>A lasanha, prato de origem italiana, consiste em camadas
                         de massa de macarrão em formato de folhas com queijos e
                         molhos diferentes entre elas.</p>
-                  </div>
+                  </div></a>
                </div>
             </div>
             <div class="col-xs-12 col-md-4">
                <div class="imagemFundoMenor" style="background-image: url(imagens/destaque3.jpg)">
-                  <div class="textoFundo">
+                  <a href="#"><div class="textoFundo">
                      <h3>Mousse de Limão</h3>
                      <p>Você vai adorar essa receita de mousse de limão.
                         Não há nada mais gostoso do que essa mousse de limão simples.
                         É rápido de fazer e fica uma delícia!</p>
-                  </div>
+                  </div></a>
                </div>
             </div>
             <div class="col-xs-12 col-md-4">
                <div class="imagemFundoMenor" style="background-image: url(imagens/destaque4.jpg)">
-                  <div class="textoFundo">
+                  <a href="#"><div class="textoFundo">
                      <h3>Hamburguer Caseiro</h3>
                      <p>Se você quer aprender como fazer um hambúrguer caseiro
                         tão bom quanto da sua hamburgueria preferida acertou.</p>
-                  </div>
+                  </div></a>
                </div>
             </div>
             <div class="col-xs-12 col-md-4">
                <div class="imagemFundoMenor" style="background-image: url(imagens/destaque5.jpg)">
-                  <div class="textoFundo">
+                  <a href="#"><div class="textoFundo">
                      <h3>Cupcake Veludo Vermelho</h3>
                      <p>É uma receita tradicional americana. É um doce delicioso e
                         tem a referência de "ser o melhor bolo do mundo" e realmente o é.</p>
-                  </div>
+                  </div></a>
                </div>
             </div>
          </div>
