--- a/sobre.html
+++ b/sobre.html
@@ -6,6 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Sempre colocar os 3 metas para a responsividade funcionar-->
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
    <link rel="stylesheet" href="custom.css">
    <title></title>
 </head>
@@ -19,8 +20,8 @@
             </div>
             <ul class="nav navbar-nav navbar-right">
                <li><a href="receitas.html" class="receitas">Receitas</a></li>
-               <li><a href="#" class="sobre">Sobre</a></li>
-               <li><a href="#" class="contato">Contato</a></li>
+               <li><a href="sobre.html" class="sobre">Sobre</a></li>
+               <li><a href="contato.html" class="contato">Contato</a></li>
             </ul>
          </div>
       </nav>
@@ -75,18 +76,19 @@
                   <p>receitinhas@injunior.com.br</p>
 
                   <p> ReiceitINhas | Todos os direitos reservados </p>
-              </div>
+               </div>
 
-              <div class="sociais col-xm-12 col-sm-4 col-md-4">
-                    <p>Acompanhe-nos nas redes sociais</p>
-                    <ul class="redessociais">
-                      <li><a href="#">  <img  src="imagens/facebook.png" alt="facebook"/></a></li>
-                      <li><a href="#">  <img  src="imagens/instagram.png" alt="instagram"/></a></li>
-                    <li><a href="#">  <img  src="imagens/twitter.png" alt="twitter "/></li>
-                  </div>
-              </div>
+               <div class="sociais col-xm-12 col-sm-4 col-md-4">
+                  <p>Acompanhe-nos nas redes sociais</p>
+                  <ul class="redessociais">
+                     <li><a href="#">  <img  src="imagens/facebook.png" alt="facebook"/></a></li>
+                     <li><a href="#">  <img  src="imagens/instagram.png" alt="instagram"/></a></li>
+                     <li><a href="#">  <img  src="imagens/twitter.png" alt="twitter "/></a></li>
+                  </ul>
+               </div>
             </div>
-        </div>
+         </div>
+      </div>
    </footer>
 </body>
 
