--- a/receitas.html
+++ b/receitas.html
@@ -6,20 +6,18 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Sempre colocar os 3 metas para a responsividade funcionar-->
    <meta name="viewport" content="width=device-width, initial-scale=1">
       <!--SEO-->
-   <title>Conheça as nossas receitas praticas e rapidas, as mais buscadas e melhores posicionadas do nosso site - ReceINtinhas</title> 
+   <title>Conheça as nossas receitas praticas e rapidas, as mais buscadas e melhores posicionadas do nosso site - ReceINtinhas</title>
    <meta name="robots" content="index, follow">
    <meta name="googlebot" content="index,follow">
    <meta name="description" content="Conheça as nossas receitas praticas e rapidas, as mais buscadas e melhores posicionadas do nosso site - ReceINtinhas"/>
-   <meta name=”keywords” content=”Receita, gastronomia, comida, receitas, food, dicas de preparo"/>
-   <meta name=”revisit-after” content=”3 Days” />  
+   <meta name="keywords" content="Receita, gastronomia, comida, receitas, food, dicas de preparo"/>
+   <meta name="revisit-after" content="3 Days" />
    <meta name="author" content="Marcos Paulo, Ricardo Junior">
-   <meta http-equiv="content-language" content="pt-br">
    <meta http-equiv="content-language" content="pt-br">
    <!--SEO fim-->
    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
    <link rel="stylesheet" href="custom.css">
-   <title></title>
 </head>
 
 <body>
@@ -27,12 +25,12 @@
       <nav class="navbar navbar-default navbar-fixed-top">
          <div class="container-fluid">
             <div class="navbar-header">
-               <a class="navbar-brand" href="index.html" title="Pagina inicial do ReiceitINhas"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
+               <a class="navbar-brand" href="index.html"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-               <li><a href="receitas.html" class="receitas" title="Conheça os principais pratos e mais buscados no nosso site - ReceINtinhas">Receitas</a></li>
-               <li><a href="sobre.html" class="sobre" title="Saiba quem somos e o que fazemos - ReceINtinhas">Sobre</a></li>
-               <li><a href="contato.html" class="contato" title="Entre em contato o ReceINtinhas, Site de receitas e conteudo grastonomico">Contato</a></li>
+               <li><a href="receitas.html" class="receitas">Receitas</a></li>
+               <li><a href="sobre.html" class="sobre">Sobre</a></li>
+               <li><a href="contato.html" class="contato">Contato</a></li>
             </ul>
          </div>
       </nav>
@@ -95,14 +93,16 @@
          </div>
       </div>
    </section>
+   <div class="clear">
 
+   </div>
    <footer id="footer">
 	    <div class="containerfooter">
 	        <div class="row" >
 
 	            <div class="col-xs-12 col-sm-4 col-md-4">
 	              <div class="logo">
-                    <a href="index.html" title="Pagina inicial do ReiceitINhas">  <img src="imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
+                    <a href="index.html">  <img src="imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
 	              </div>
 	            </div>
 
@@ -118,9 +118,9 @@
 	            <div class="sociais col-xs-12 col-sm-6 col-md-4">
   	                <p>Acompanhe-nos nas redes sociais</p>
   	                <ul class="redessociais">
-                     <li><a href="#" title="Acesse o Facebook do ReiceitINhas">  <img  src="imagens/facebook.png" alt="Acesse o Facebook do ReiceitINhas"/></a></li>
-                     <li><a href="#" title="Acesse o Instagram do ReiceitINhas">  <img  src="imagens/instagram.png" alt="Logo do Instagram"/></a></li>
-                     <li><a href="#" title="Acesse o Twiiter do ReiceitINhas">  <img  src="imagens/twitter.png" alt="Logo do Twitter"/></a></li>
+                     <li><a href="#">  <img  src="imagens/facebook.png" alt="Acesse o Facebook do ReiceitINhas"/></a></li>
+                     <li><a href="#">  <img  src="imagens/instagram.png" alt="Logo do Instagram"/></a></li>
+                     <li><a href="#">  <img  src="imagens/twitter.png" alt="Logo do Twitter"/></a></li>
                    </ul>
 	                </div>
 	            </div>
