--- a/sobre.html
+++ b/sobre.html
@@ -6,13 +6,14 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Sempre colocar os 3 metas para a responsividade funcionar-->
    <meta name="viewport" content="width=device-width, initial-scale=1">
       <!--SEO-->
-   <title>Saiba quem somos e o que fazemos - ReceINtinhas</title> 
+   <title>Saiba quem somos e o que fazemos - ReceINtinhas</title>
    <meta name="robots" content="index, follow">
    <meta name="googlebot" content="index,follow">
    <meta name="description" content="Plataforma de conteúdo gastronômico, o ReceINtinhas reúne pessoas comuns que simplesmente gostam de comer e beber e que compartilham suas impressões e receitas para todos."/>
-   <meta name=”keywords” content=”Receita, gastronomia, comida, quem somos, equipe"/>
-   <meta name=”revisit-after” content=”3 Days” />  
+   <meta name="keywords" content="Receita, gastronomia, comida, quem somos, equipe"/>
+   <meta name="revisit-after" content="3 Days" />
    <meta name="author" content="Marcos Paulo, Ricardo Junior">
+   <meta http-equiv="content-language" content="pt-br">
    <!--SEO fim-->
    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -25,12 +26,12 @@
       <nav class="navbar navbar-default navbar-fixed-top">
          <div class="container-fluid">
             <div class="navbar-header">
-               <a class="navbar-brand" href="index.html" title="Pagina inicial do ReiceitINhas"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
+               <a class="navbar-brand" href="index.html"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-               <li><a href="receitas.html" class="receitas" title="Conheça os principais pratos e mais buscados no nosso site - ReceINtinhas">Receitas</a></li>
-               <li><a href="sobre.html" class="sobre" title="Saiba quem somos e o que fazemos - ReceINtinhas">Sobre</a></li>
-               <li><a href="contato.html" class="contato" title="Entre em contato o ReceINtinhas, Site de receitas e conteudo grastonomico">Contato</a></li>
+               <li><a href="receitas.html" class="receitas">Receitas</a></li>
+               <li><a href="sobre.html" class="sobre">Sobre</a></li>
+               <li><a href="contato.html" class="contato">Contato</a></li>
             </ul>
          </div>
       </nav>
@@ -39,7 +40,7 @@
    <section class="sobre">
       <div class="container bloco">
           <div class="col-md-12">
-             <h2><b>Quem somos</b></h2>
+             <h1>Quem somos</h1>
           </div>
           <div class="col-xs-12">
              <p>Plataforma de conteúdo gastronômico, o <b>ReceINtinhas</b> reúne pessoas comuns que simplesmente gostam de comer e beber e que compartilham suas impressões
@@ -47,16 +48,16 @@
              As <b>receitas</b> são práticas, econômicas e para todos os públicos: desde vegetarianos até carnívoros. Além disso, não somos apenas mais um site de receitas e sim um guia prático e rápido para que qualquer um pode aprender a cozinhar, basta ter uma boa receita na mão e a boa vontade de executar.</p>
           </div>
 
-          <div class="col-md-12"><h2><b>Equipe</b></h2></div>
+          <div class="col-md-12"><h2>Equipe</h2></div>
             <div class="chef1 col-xm-12 col-sm-12 col-md-6">
-               <div class="imagemFundoChef" style="background-image: url(imagens/chef1.jpg)" title="Nicole Smith, Nossa chef">
+               <div class="imagemFundoChef" style="background-image: url(imagens/chef1.jpg)">
                   <div class="textoFundoChef">
                      <h2>Nicole Smith</h2>
                   </div>
                </div>
             </div>
             <div class="chef2 col-xm-12 col-sm-12 col-md-6">
-               <div class="imagemFundoChef" style="background-image: url(imagens/chef.jpg)" title="Thomas Smith, Nosso chef">
+               <div class="imagemFundoChef" style="background-image: url(imagens/chef.jpg)">
                   <div class="textoFundoChef">
                      <h2>Thomas Smith</h2>
                   </div>
@@ -66,7 +67,9 @@
    </section>
 
 
+   <div class="clear">
 
+   </div>
 
    <footer id="footer">
       <div class="containerfooter">
@@ -74,7 +77,7 @@
 
               <div class="col-xm-12 col-sm-4 col-md-4">
                 <div class="logo">
-                    <a href="index.html" title="Pagina inicial do ReiceitINhas">  <img src="imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
+                    <a href="index.html">  <img src="imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
                 </div>
               </div>
 
@@ -90,9 +93,9 @@
                <div class="sociais col-xm-12 col-sm-4 col-md-4">
                   <p>Acompanhe-nos nas redes sociais</p>
                   <ul class="redessociais">
-                     <li><a href="#" title="Acesse o Facebook do ReiceitINhas">  <img  src="imagens/facebook.png" alt="Logo do Facebook"/></a></li>
-                     <li><a href="#" title="Acesse o Instagram do ReiceitINhas">  <img  src="imagens/instagram.png" alt="Logo do Instagram"/></a></li>
-                     <li><a href="#" title="Acesse o Twiiter do ReiceitINhas">  <img  src="imagens/twitter.png" alt="Logo do Twitter"/></a></li>
+                     <li><a href="#">  <img  src="imagens/facebook.png" alt="Logo do Facebook"/></a></li>
+                     <li><a href="#">  <img  src="imagens/instagram.png" alt="Logo do Instagram"/></a></li>
+                     <li><a href="#">  <img  src="imagens/twitter.png" alt="Logo do Twitter"/></a></li>
                   </ul>
                </div>
             </div>
