--- a/sobre.html
+++ b/sobre.html
@@ -26,7 +26,7 @@
       <nav class="navbar navbar-default navbar-fixed-top">
          <div class="container-fluid">
             <div class="navbar-header">
-               <a class="navbar-brand" href="index.html"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
+               <a class="navbar-brand" href="index.html"><img src="Imagens/logo.png" alt="Logo ReceitINhas"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
                <li><a href="receitas.html" class="receitas">Receitas</a></li>
@@ -50,14 +50,14 @@
 
           <div class="col-md-12"><h2>Equipe</h2></div>
             <div class="chef1 col-xm-12 col-sm-12 col-md-6">
-               <div class="imagemFundoChef" style="background-image: url(imagens/chef1.jpg)">
+               <div class="imagemFundoChef" style="background-image: url(Imagens/chef1.jpg)">
                   <div class="textoFundoChef">
                      <h2>Nicole Smith</h2>
                   </div>
                </div>
             </div>
             <div class="chef2 col-xm-12 col-sm-12 col-md-6">
-               <div class="imagemFundoChef" style="background-image: url(imagens/chef.jpg)">
+               <div class="imagemFundoChef" style="background-image: url(Imagens/chef.jpg)">
                   <div class="textoFundoChef">
                      <h2>Thomas Smith</h2>
                   </div>
@@ -77,7 +77,7 @@
 
               <div class="col-xm-12 col-sm-4 col-md-4">
                 <div class="logo">
-                    <a href="index.html">  <img src="imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
+                    <a href="index.html">  <img src="Imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
                 </div>
               </div>
 
@@ -93,9 +93,9 @@
                <div class="sociais col-xm-12 col-sm-4 col-md-4">
                   <p>Acompanhe-nos nas redes sociais</p>
                   <ul class="redessociais">
-                     <li><a href="#">  <img  src="imagens/facebook.png" alt="Logo do Facebook"/></a></li>
-                     <li><a href="#">  <img  src="imagens/instagram.png" alt="Logo do Instagram"/></a></li>
-                     <li><a href="#">  <img  src="imagens/twitter.png" alt="Logo do Twitter"/></a></li>
+                     <li><a href="#">  <img  src="Imagens/facebook.png" alt="Logo do Facebook"/></a></li>
+                     <li><a href="#">  <img  src="Imagens/instagram.png" alt="Logo do Instagram"/></a></li>
+                     <li><a href="#">  <img  src="Imagens/twitter.png" alt="Logo do Twitter"/></a></li>
                   </ul>
                </div>
             </div>
